# godra

./: .gitignore  README.md  cabal.project  flake.nix
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Goban.css
godra-server/: godra-server.cabal
godra-server/app/: Main.hs
godra-server/src/Godra/: Game.hs  Server.hs
nix/: project.nix  shell.nix
