cabal-version: 3.0
name:          godra-server
version:       0.1.0.0
license:       Apache-2.0

common ghc-version-support
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveAnyClass
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TypeApplications

library godra
  import: lang
  hs-source-dirs: src
  exposed-modules:
    Godra.Game
    Godra.Server

  build-depends:
    , base >= 4.9 && < 5
    , aeson
    , http-types
    , hydra-cardano-api
    , hydra-node
    , hydra-prelude
    , io-classes
    , network
    , safe
    , wai
    , wai-websockets
    , warp
    , websockets

executable godra-server
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -Wall
  build-depends:
    , base >= 4.9 && < 5
    , godra
